Bug 145621 - Crash swlo!IDocumentMarkAccess::IsLegalPaMForCrossRefHeadingBookmark+0x2681 at overwriting certain area
Summary: Crash swlo!IDocumentMarkAccess::IsLegalPaMForCrossRefHeadingBookmark+0x2681 a...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: bibisected, bisected, haveBacktrace, regression
: 145851 145880 (view as bug list)
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2021-11-10 22:17 UTC by Telesto
Modified: 2022-01-11 09:51 UTC (History)
6 users (show)

See Also:
Crash report or crash signature: ["sw::mark::MarkManager::renameMark(sw::mark::IMark *,rtl::OUString const &)"]


Attachments
Example file (19.12 KB, application/vnd.oasis.opendocument.text)
2021-11-10 22:17 UTC, Telesto
Details
BT without symbols (14.20 KB, text/plain)
2021-11-10 22:18 UTC, Telesto
Details
backtrace from SIGSEGV (9.54 KB, text/plain)
2021-11-19 18:27 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-11-10 22:17:30 UTC
Description:
Crash swlo!IDocumentMarkAccess::IsLegalPaMForCrossRefHeadingBookmark+0x2681 at overwriting certain area

Steps to Reproduce:
1. Open the attached file
2. Press arrow left
3. Press CTRL+SHIFT+Arrow RIGHT
4. Press CTRL+C
5. Press CTRL+V

Or
1. Open the attached file
2. Press arrow left
3. Press CTRL+SHIFT+Arrow RIGHT
4. Press CTRL+C
5. CTRL+N
6. CTRL+V
7. CTRL+Z
8. CTRL+V -> Crash

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 73334560b2dd2d60ac58d2cc2b1a5295490b03e1
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-11-10 22:17:46 UTC
Created attachment 176183 [details]
Example file
Comment 2 Telesto 2021-11-10 22:18:32 UTC
Created attachment 176184 [details]
BT without symbols
Comment 3 Telesto 2021-11-10 22:19:50 UTC
Still OK with
Version: 6.4.0.0.alpha0+ (x64)
Build ID: c56bf1479cc71d1a2b0639f6383e90c1f7e3655b
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 4 Rainer Bielefeld Retired 2021-11-11 13:23:26 UTC
REPRODUCIBLE with Server Installation of Version7.3.0.0.alpha1+ (x64)  |   Build ID b8d17d754830ab57099dcdfa72a96bfad404ab1a  |  CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win  |  Locale: de-DE (de_DE); UI: de-DE  |  Calc: CL  |  Special devUserProfile
Comment 5 Xisco Faulí 2021-11-11 14:38:43 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4bf04dea9afb30a9395e80b07a81d1908937ee8b

author	Michael Stahl <michael.stahl@allotropia.de>	2021-08-27 14:38:18 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2021-08-27 17:09:29 +0200
commit 4bf04dea9afb30a9395e80b07a81d1908937ee8b (patch)
tree 2c118bcecdc4f4937f8e70b9272c53bb537a99a4
parent 3608de9a3647294361c64b923b1ae413ad9755df (diff)
tdf#128106 sw: copy bookmarks at start if whole node is copied

Bisected with: bibisect-linux64-7.3

Adding Cc: to Michael Stahl
Comment 6 Terrence Enger 2021-11-19 18:27:15 UTC
Created attachment 176368 [details]
backtrace from SIGSEGV

The backtrace is from the first set of STR in commit 631aa911
(2021-11-09) built and running on debian-buster.

The second set of STR produces a very similar backtrace: I notice no
differences except addresses.

I am removing keyword wantBacktrace and adding haveBacktrace.
Comment 7 Xisco Faulí 2021-11-23 14:59:04 UTC
*** Bug 145851 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2021-11-24 16:43:55 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/36a005bb546e5ba68d2e7a57e0453999c7167e41

tdf#145621 sw: fix crash pasting paragraph with cross-reference mark

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2021-11-24 21:25:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/87d8d435f2e3f43d28727b657ecbfb7b81d3f943

tdf#145621 sw: fix crash pasting paragraph with cross-reference mark

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2021-11-25 15:24:06 UTC
I added a unittest for this ticket in https://cgit.freedesktop.org/libreoffice/core/commit/?id=d8ac6ba98674652bd0ca317da4a0606da5adce85, but I wrote the bug id wrongly, so the notification never arrived.
Comment 11 Xisco Faulí 2021-11-25 15:51:59 UTC
Issue verified in

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 7b0aabe71d2455f6f643553a07f1056935cf190f
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded

@Michael Stahl, thanks for fixing this issue

Closing as VERIFIED FIXED!!
Comment 12 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard
Comment 13 Xisco Faulí 2022-01-11 09:51:25 UTC
*** Bug 145880 has been marked as a duplicate of this bug. ***