tdf#145621 sw: fix crash pasting paragraph with cross-reference mark

At last, a case where copying a mark fails for legitimate reasons.

(regression from 4bf04dea9afb30a9395e80b07a81d1908937ee8b)

Change-Id: I7a318e03c0b0d30e204eadb5012f190edbbba486
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125767
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 36a005bb546e5ba68d2e7a57e0453999c7167e41)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125722
Reviewed-by: Caolán McNamara <caolanm@redhat.com>